test/tests/errors/error-procedure-incorrect-param.sm
// true
// false
/**/
/**/

program {
    proc x(a, b) {
        output "t";
    }

    x(4);
}